--- a/pom.xml
+++ b/pom.xml
@@ -165,20 +165,20 @@
                         </plugin>
                     </plugins>
                 </configuration>
-                <!-- <executions>
+                <executions>
                     <execution>
                         <goals>
                             <goal>check</goal>
                         </goals>
                     </execution>
-                </executions> -->
+                </executions>
                 <dependencies>
                     <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
                         <!-- <version>4.2.1</version> -->
-                        <version>4.7.3.4</version>
+                        <version>4.7.3</version>
                     </dependency>
                 </dependencies>
             </plugin>
